--- a/appContactosCoreData/Base.lproj/Main.storyboard
+++ b/appContactosCoreData/Base.lproj/Main.storyboard
@@ -87,32 +87,33 @@
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" spacing="50" translatesAutoresizingMaskIntoConstraints="NO" id="wHD-Rt-RbQ">
                                 <rect key="frame" x="15" y="98" width="384" height="704"/>
                                 <subviews>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="bKE-1U-Zwq">
-                                        <rect key="frame" x="0.0" y="0.0" width="384" height="283.5"/>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="person.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="bKE-1U-Zwq">
+                                        <rect key="frame" x="0.0" y="1.5" width="384" height="147"/>
+                                        <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="150" id="GQe-lp-hUq"/>
                                         </constraints>
                                     </imageView>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Nombre" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="MXz-0m-FuQ">
-                                        <rect key="frame" x="0.0" y="333.5" width="384" height="41.5"/>
+                                        <rect key="frame" x="0.0" y="200" width="384" height="65.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Telefono" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="EgW-LC-7EZ">
-                                        <rect key="frame" x="0.0" y="425" width="384" height="41.5"/>
+                                        <rect key="frame" x="0.0" y="315.5" width="384" height="65.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Direccion" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Tb5-iN-aIs">
-                                        <rect key="frame" x="0.0" y="516.5" width="384" height="41"/>
+                                        <rect key="frame" x="0.0" y="431" width="384" height="65"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="50" translatesAutoresizingMaskIntoConstraints="NO" id="nxO-yc-KZs">
-                                        <rect key="frame" x="0.0" y="607.5" width="384" height="96.5"/>
+                                        <rect key="frame" x="0.0" y="546" width="384" height="158"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ld8-RR-NFU">
-                                                <rect key="frame" x="0.0" y="0.0" width="167" height="96.5"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="167" height="158"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                                 <state key="normal" title="Guardar">
                                                     <color key="titleColor" systemColor="systemGreenColor"/>
@@ -122,7 +123,7 @@
                                                 </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yyt-bG-AvN">
-                                                <rect key="frame" x="217" y="0.0" width="167" height="96.5"/>
+                                                <rect key="frame" x="217" y="0.0" width="167" height="158"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="26"/>
                                                 <state key="normal" title="Cancelar">
                                                     <color key="titleColor" systemColor="systemPinkColor"/>
@@ -153,7 +154,10 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
+                        <outlet property="direccionTextField" destination="Tb5-iN-aIs" id="oNc-Ns-3sE"/>
+                        <outlet property="imagenPerson" destination="bKE-1U-Zwq" id="rHO-Ux-bEh"/>
                         <outlet property="nombreTextField" destination="MXz-0m-FuQ" id="FeM-Hl-axH"/>
+                        <outlet property="telefonoTextField" destination="EgW-LC-7EZ" id="joX-kl-TYl"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7jG-2K-9ak" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -182,6 +186,7 @@
     <resources>
         <image name="camera" catalog="system" width="128" height="94"/>
         <image name="person" catalog="system" width="128" height="117"/>
+        <image name="person.fill" catalog="system" width="128" height="120"/>
         <image name="plus.circle" catalog="system" width="128" height="121"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
